--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <input type="text" name="name" autofocus/>
       <div class="form-field"></div>
         <label>Room name</label>
-        <input type="text" name="romm"/>
+        <input type="text" name="room"/>
       <div class="form-field"></div>
       <button>Join</button>
       </form>
